fix width on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@ body {
 	line-height: 1.7;
 }
 main {
-	width: 720px;
+	max-width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
